# cli2rest-bio

./: .gitignore  CITATION.cff  MANIFEST.in  README.md  build.sh  cli2rest-bio.py  devenv.nix  pyproject.toml  requirements.in  requirements.txt  run-gha-tests.sh  tool_runner.py
.github/: dependabot.yml
.github/workflows/: build-and-push-barnaba.yml  build-and-push-bpnet.yml  build-and-push-fr3d.yml  build-and-push-inkscape.yml  build-and-push-maxit.yml  (+9 more)
barnaba/: Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt
bpnet/: 001-change-chain-separatator.patch  Dockerfile  README.md  wrapper.sh
cli2rest_bio/: __init__.py
docs/: python-tool-pinning.md
dssr/: Dockerfile  README.md
fr3d/: Dockerfile  README.md  config.yaml  fr3d.sh  fr3d_runner.py  requirements.in  requirements.txt  wrapper.py
inkscape/: Dockerfile  README.md  add-text-to-svg.py
maxit/: Dockerfile  README.md  config-cif2mmcif.yaml  config-cif2pdb.yaml  config-pdb2cif.yaml  maxit-cif2mmcif.sh  maxit-cif2pdb.sh  maxit-pdb2cif.sh  maxit.sh
mc-annotate/: Dockerfile  README.md  wrapper.sh
rchie/: Dockerfile  README.md  wrapper.py
reduce/: Dockerfile  README.md  config.yaml  reduce.sh  wrapper.sh
rnapolis/: Dockerfile  README.md  base-triple.cif  config-splitter.yaml  config-unifier.yaml  config.yaml  coplanarity-checker-wrapper.py  pyproject.toml  requirements.in  requirements.txt  splitter-wrapper.py  unifier-wrapper.py
rnapuzzler/: Dockerfile  README.md  wrapper.py
rnaview/: Dockerfile  README.md  config-cif.yaml  config-pdb.yaml  config.yaml  rnaview-cif.sh  rnaview-pdb.sh
varna-tz/: Dockerfile  README.md  wrapper.sh
(+29 files in other folders)
