[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli2rest-bio"
version = "0.1.0"
description = "CLI to REST API wrapper for bioinformatics tools"
readme = "README.md"
authors = [
    {name = "Author", email = "author@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "docker>=6.1.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.scripts]
cli2rest-bio = "cli2rest_bio:main"
