[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli2rest-bio"
version = "0.1.4"
description = "CLI to REST API wrapper for bioinformatics tools"
readme = "README.md"
authors = [
    {name = "Tomasz Zok", email = "tomasz.zok@cs.put.poznan.pl"}
]
license = "MIT" # Use SPDX identifier directly
classifiers = [
    "Programming Language :: Python :: 3",
    # License classifier is deprecated, use the 'license' field above
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "docker>=6.1.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
]

[project.scripts]
cli2rest-bio = "cli2rest_bio:main"

[tool.setuptools]
package-dir = {"" = "src"}
# Include non-code files specified in MANIFEST.in
include-package-data = true

[tool.setuptools.package-data]
"cli2rest_bio" = ["configs/**/*"]
